# CellFlow

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  WoundHealing_Hydro_OFF.py  WoundHealing_Hydro_ON.py  benchmark_a1.py  benchmark_a2.py  cellflow_core.py  cellflow_env.yml  cluster_size.ipynb  main_example.py  post_process.ipynb  profile_benchmark.py  pyproject.toml  pytest.ini  run_hydro_OFF.py  run_hydro_ON.py  run_hydro_ON_biology_OFF.py  visualize.ipynb
cellflow/: __init__.py  cell.py  cellflow_core.py  initializers.py  io.py  simulation.py  visualization.py
docs/: Makefile  bioreactor_demos.md  giverso_replication.md  physicell_portability.md  technical_manual.tex  user_manual.tex
experiments/: README.md  bioreactor_aggregate.py  bioreactor_operating_diagram.py  cluster_growth.py  convergence.py  ecm_colony.py  ecm_poroelastic_demo.py  giverso_branching.py  giverso_extreme.py  giverso_fingering.py  giverso_lcheck.py  giverso_nondim.py  giverso_seed.py  make_gifs.py  mechanics_pressure_examples.py  mechanics_pressure_inhibition.py  mechanotransduction_demo.py  viscosity_coupling_range.py  viscosity_migration.py  viscosity_sweep.py  viscosity_visual.py  wound_closure_ensemble.py  wound_closure_hydro.py  wound_closure_isolated.py
paper/: paper.bib  paper.md
tests/: test_biology_batch.py  test_cell.py  test_config_integration.py  test_differential_adhesion.py  test_directed_division.py  test_fluid_brinkman.py  test_fluid_ibm.py  test_initializers.py  test_kernels_diffusion.py  test_kernels_forces.py  test_kernels_stokeslet.py  test_mechanics.py  (+8 more)
(+20 files in other folders)
